src/objects/Value_Package__c.object
<CustomObject>
    <fields>
        <fullName>Capture_Team__c</fullName>
        <label>Capture Team</label>
        <referenceTo>Capture_Team__c</referenceTo>
        <relationshipLabel>Value Package</relationshipLabel>
        <relationshipName>Value_Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quantification__c</fullName>
        <label>Quantification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <picklist>
            <picklistValues>
                <fullName>Operational availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low operational cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-time completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low cost/price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rapid payback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Execution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Value Package</label>
    <nameField>
        <displayFormat>VP-{000000}</displayFormat>
        <label>Value Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>